[project]
name = "hive-mp-cli"
version = "0.1.0"
description = "Agent-friendly CLI for archiving WeChat Official Account articles to local markdown."
readme = "README.md"
authors = [
    { name = "xavier", email = "liangzhewei@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=48.0.0",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "markdownify>=1.2.2",
    "playwright>=1.59.0",
    "pydantic-settings>=2.14.0",
    "qrcode[pil]>=8.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
hive-mp-cli = "hive_mp_cli.cli:main"
hive-mp = "hive_mp_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hive_mp_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/hive_mp_cli/wechat/anti_crawler_base.js" = "hive_mp_cli/wechat/anti_crawler_base.js"
"src/hive_mp_cli/wechat/anti_crawler_advanced.js" = "hive_mp_cli/wechat/anti_crawler_advanced.js"
"src/hive_mp_cli/wechat/anti_crawler_behavior.js" = "hive_mp_cli/wechat/anti_crawler_behavior.js"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
